--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,11 @@
-extra-deps: []
+extra-deps:
+  - GLURaw-1.5.0.2
+  - GLUtil-0.8.7
+  - ObjectName-1.1.0.0
+  - OpenGL-2.13.1.0
+  - OpenGLRaw-2.5.5.0
+  - hpp-0.1.0.0
+  - WaveFront-0.1.0.0
 resolver: lts-3.5
 flags: {}
 packages:
