--- a/Michelangelo.cabal
+++ b/Michelangelo.cabal
@@ -45,6 +45,10 @@ extra-source-files:  README.md
 -- Constraint on the version of Cabal needed to build this package.
 cabal-version:       >=1.10
 
+--
+source-repository head
+  type:     git
+  location: https://github.com/SwiftsNamesake/Michelangelo.git
 
 library
   -- Modules exported by the library.
