--- a/Michelangelo.cabal
+++ b/Michelangelo.cabal
@@ -10,7 +10,7 @@ name:                Michelangelo
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:             0.1.0.3
+version:             0.2.3.0
 
 -- A short (one-line) description of the package.
 synopsis:            OpenGL for dummies
@@ -54,7 +54,7 @@ library
   -- Modules exported by the library.
   exposed-modules:     Graphics.Michelangelo.Types,   Graphics.Michelangelo.Utils, Graphics.Michelangelo.Transformations, Graphics.Michelangelo.Shapes,
                        Graphics.Michelangelo.Shaders, Graphics.Michelangelo.Scene, Graphics.Michelangelo.Mesh,            Graphics.Michelangelo.Entity,
-                       Graphics.Michelangelo.Camera
+                       Graphics.Michelangelo.Camera,  Graphics.Michelangelo.Lenses
 
   -- Modules included in this library but not exported.
   -- other-modules:
